<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalEx</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_planner">Planner</string>
    <string name="b4month">Month</string>
    <string name="b4week">Week</string>
    <string name="b4day">Day</string>
    <string name="b4surprise">Surprise Me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="eventNameString">Event Name</string>
    <string name="statusStr">Status</string>
    <string name="inHonorOfString">In Honor Of</string>
    <string name="OccasionStr">Occasion</string>
    <string name="surpriseMeStr">Surprise\n   Me</string>
    <string name="ShortEventDescrStr">Short Event Description</string>
    <string name="fromStr">From</string>
    <string name="toStr">To</string>
    <string name="dateStr">mm/dd/yy</string>
    <string name="timeStr">hh:mm</string>
    <string name="allDayStr">All Day</string>
    <string name="saveStr">Save</string>
    <string name="cancelStr">Cancel</string>
    <string name="clearStr">Clear</string>
    <string name="actionStr">Actions</string>
    <string name="notesStr">Notes</string>
    <string name="chooseOccasionStr">Choose Event</string>
    <string name="create_new_event">Create New Event</string>


    <string-array name="occasion_values">
        <item> birthday </item>
        <item> casual relaxation </item>
        <item> evening beer </item>
        <item> party </item>
    </string-array>


    <string name="parse_app_id">BNtuAUlmqp4bI2V6oxz9R1ll7Y5nQUiRaWBSnyI4</string>
    <string name="parse_client_key">7MuCAzxPBM1n29QbCjxqX70jZl31fslE2qfJgBOG</string>
    <string name="parse_msg_channel">friends_time_parse_channel</string>
    <string name = "parse_message_action">com.friendstime.apps.calex.utils.UPDATE_STATUS</string>
    <string name="title_activity_created_event_display">CreatedEventDisplay</string>
</resources>
