<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.friendstime.apps.calex.activities.CreateEventActivity"
    android:weightSum="1"
    >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/rlCreateEventSearch"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inHonorOfString"
            android:id="@+id/tvInHonorOf"
            android:layout_below="@+id/tvEventName"
            android:layout_alignParentLeft="true"

            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/svInHonorOf" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/tvEventName"
            android:layout_toRightOf="@+id/ivEventLabel"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/ivEventLabel"
            android:layout_toLeftOf="@+id/tvStatus"
            android:layout_toStartOf="@+id/tvStatus"
            android:hint="@string/eventNameString" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivEventLabel"
            android:src="@drawable/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivEventStatus"
            android:src="@drawable/abc_btn_radio_material"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/tvStatus"
            android:layout_alignStart="@+id/tvStatus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statusStr"
            android:id="@+id/tvStatus"
            android:layout_below="@+id/ivEventStatus"
            android:layout_above="@+id/btAddInHonor"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/svInHonorOf"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/tvEventName"
            android:layout_toRightOf="@+id/tvInHonorOf"
            android:layout_toStartOf="@+id/btAddInHonor"
            android:layout_toLeftOf="@+id/btAddInHonor"
            android:layout_alignRight="@+id/svOccasion"
            android:layout_alignEnd="@+id/svOccasion" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btAddInHonor"
            android:src="@drawable/badge"
            android:layout_above="@+id/btSurpriseMe"
            android:layout_alignRight="@+id/ivEventStatus"
            android:layout_toRightOf="@+id/tvEventName"
            android:layout_alignEnd="@+id/ivEventStatus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvOccasion"
            android:layout_below="@+id/tvInHonorOf"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/OccasionStr"
            android:layout_alignBottom="@+id/svOccasion" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/svOccasion"
            android:layout_toRightOf="@+id/tvOccasion"
            android:layout_below="@+id/svInHonorOf"
            android:spinnerMode="dropdown"
            android:layout_toLeftOf="@+id/btSurpriseMe"
            android:layout_toStartOf="@+id/btSurpriseMe" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surpriseMeStr"
            android:id="@+id/btSurpriseMe"
            android:layout_below="@+id/svInHonorOf"
            android:layout_alignRight="@+id/btAddInHonor"
            android:layout_alignEnd="@+id/btAddInHonor" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEventDescription"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/ShortEventDescrStr" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fromStr"
            android:id="@+id/tvFrom"

            android:layout_alignBottom="@+id/tvDateFrom"
            android:layout_alignRight="@+id/tvTo"
            android:layout_alignEnd="@+id/tvTo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toStr"
            android:id="@+id/tvTo"
            android:layout_marginLeft="37dp"
            android:layout_marginStart="37dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:id="@+id/tvDateFrom"
            android:hint="@string/dateStr"
            android:layout_alignTop="@+id/tvTimeFrom"
            android:layout_alignLeft="@+id/tvDateTo"
            android:layout_alignStart="@+id/tvDateTo"
            android:layout_alignRight="@+id/tvDateTo"
            android:layout_alignEnd="@+id/tvDateTo" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:id="@+id/tvDateTo"
            android:hint="@string/dateStr"
            android:layout_alignTop="@+id/tvTo"
            android:layout_toRightOf="@+id/btSave"
            android:layout_toEndOf="@+id/btSave" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:id="@+id/tvTimeFrom"
            android:hint="@string/timeStr"


            android:layout_above="@+id/tvTimeTo"
            android:layout_alignLeft="@+id/tvTimeTo"
            android:layout_alignStart="@+id/tvTimeTo" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:id="@+id/tvTimeTo"
            android:hint="@string/timeStr"
            android:layout_alignTop="@+id/tvDateTo"
            android:layout_toRightOf="@+id/tvDateTo"
            android:layout_toEndOf="@+id/tvDateTo" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbAllDay"
            android:checked="false"
            android:layout_marginRight="39dp"
            android:layout_marginEnd="39dp"
            android:layout_alignBottom="@+id/tvTimeTo"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allDayStr"
            android:id="@+id/tvAllDay"

            android:layout_above="@+id/tvTimeTo"
            android:layout_alignRight="@+id/cbAllDay"
            android:layout_alignEnd="@+id/cbAllDay" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actionStr"
            android:id="@+id/btActions"
            android:layout_above="@+id/btSave"
            android:layout_toStartOf="@+id/btCancel"
            android:layout_marginBottom="27dp"
            android:layout_toLeftOf="@+id/btCancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notesStr"
            android:id="@+id/btNotes"
            android:layout_alignBottom="@+id/btActions"
            android:layout_alignRight="@+id/tvAllDay"
            android:layout_alignEnd="@+id/tvAllDay" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveStr"
            android:id="@+id/btSave"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/tvFrom"
            android:layout_alignStart="@+id/tvFrom" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelStr"
            android:id="@+id/btCancel"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearStr"
            android:id="@+id/btClear"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/btNotes"
            android:layout_alignEnd="@+id/btNotes" />
    </RelativeLayout>

</LinearLayout>
